[package]
name = "blue-high"
version = "0.1.0"
edition = "2024"
authors = [ "Johann Li <me@qinka.pro> @Qinka" ]
description = " A Rust driven embedded project for STM32F103C8T6 with LoRa"
license = "Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0"
portable-atomic = { version = "1.10", features = ["critical-section"] }

# Logging and debugging infrastructure for probe-rs via RTT
defmt = "1.0"
# defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

# STM32F1 HAL - updated to 0.11.0
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103"] }

# OLED display driver (SSD1306 via I2C)
ssd1306 = "0.10.0"
embedded-graphics = "0.8"

# USB CDC support
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# SX1268 LoRa
sx1268-rs = { git = "https://github.com/Qinka/sx1268-rs", branch = "main" }

# String formatting without heap allocation
heapless = "0.9"

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
